packages/cjs-to-esm/test/snapshots/package-corpus/core-js/actual/error/constructor.js
import parent from "../../stable/error/constructor";
const _cjs_default = parent;
export default _cjs_default;
